feat: update user activation
